--- a/.docker/dockerfile
+++ b/.docker/dockerfile
@@ -9,10 +9,12 @@ RUN go get -u github.com/spf13/cobra@latest && \
 
 RUN apt-get update && apt-get install sqlite3 -y
 
-RUN usermod -u 1000 www-data
-RUN mkdir -p /var/www/.cache
-RUN chown -R www-data:www-data /go
-RUN chown -R www-data:www-data /var/www/.cache
-USER www-data
+#RUN export CGO_CFLAGS="-g -O2 -Wno-return-local-addr"
+
+#RUN usermod -u 1000 www-data
+#RUN mkdir -p /var/www/.cache
+#RUN chown -R www-data:www-data /go
+#RUN chown -R www-data:www-data /var/www/.cache
+#USER www-data
 
 CMD ["tail", "-f", "/dev/null"]
