--- a/.docker/dockerfile
+++ b/.docker/dockerfile
@@ -11,10 +11,10 @@ RUN apt-get update && apt-get install sqlite3 -y
 
 #RUN export CGO_CFLAGS="-g -O2 -Wno-return-local-addr"
 
-#RUN usermod -u 1000 www-data
-#RUN mkdir -p /var/www/.cache
-#RUN chown -R www-data:www-data /go
-#RUN chown -R www-data:www-data /var/www/.cache
-#USER www-data
+RUN usermod -u 1000 www-data
+RUN mkdir -p /var/www/.cache
+RUN chown -R www-data:www-data /go
+RUN chown -R www-data:www-data /var/www/.cache
+USER www-data
 
 CMD ["tail", "-f", "/dev/null"]
